--- a/css/screens/main-empty.css
+++ b/css/screens/main-empty.css
@@ -12,8 +12,8 @@
 .empty-screen {
     display: flex;
     flex-direction: column;
-    min-height: 100dvh;
-		padding: 60px 0;
+    min-height: calc(100dvh - env(safe-area-inset-top));
+    padding: calc(60px + env(safe-area-inset-top)) 0 60px;
 }
 
 
